--- a/Frontend/pages/home-page.html
+++ b/Frontend/pages/home-page.html
@@ -70,6 +70,24 @@
       </div>
     </div>
 
+    <!-- Toast -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 9999">
+      <div
+        id="logoutToast"
+        class="toast align-items-center text-bg-success border-0"
+        role="alert"
+      >
+        <div class="d-flex">
+          <div class="toast-body">✅ Logged out successfully!</div>
+          <button
+            type="button"
+            class="btn-close btn-close-white me-2 m-auto"
+            data-bs-dismiss="toast"
+          ></button>
+        </div>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
@@ -80,12 +98,12 @@
 
         if (!articles || articles.length === 0) {
           row.innerHTML = `
-        <div class="col-12 text-center">
-          <div class="alert alert-info">
-            <i class="fas fa-info-circle me-2"></i>No articles yet
-          </div>
-        </div>
-      `;
+            <div class="col-12 text-center">
+              <div class="alert alert-info">
+                <i class="fas fa-info-circle me-2"></i>No articles yet
+              </div>
+            </div>
+          `;
           return;
         }
 
@@ -99,21 +117,21 @@
               : article.excerpt || "";
 
           col.innerHTML = `
-        <div class="card article-card h-100">
-          ${
-            article.imageUrl
-              ? `<img src="${article.imageUrl}" class="card-img-top article-image" alt="">`
-              : ""
-          }
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">${article.title}</h5>
-            <p class="card-text">${excerpt}</p>
-            <a href="article-detail.html?id=${
-              article.id
-            }" class="btn btn-primary mt-auto">Read Full Article</a>
-          </div>
-        </div>
-      `;
+            <div class="card article-card h-100">
+              ${
+                article.imageUrl
+                  ? `<img src="${article.imageUrl}" class="card-img-top article-image" alt="">`
+                  : ""
+              }
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">${article.title}</h5>
+                <p class="card-text">${excerpt}</p>
+                <a href="article-detail.html?id=${
+                  article.id
+                }" class="btn btn-primary mt-auto">Read Full Article</a>
+              </div>
+            </div>
+          `;
 
           row.appendChild(col);
         });
@@ -128,21 +146,20 @@
           if (!res.ok) throw new Error("Network response was not ok");
 
           const data = await res.json();
-          // console.log("Home Articles:", data);
           renderArticles(data);
         } catch (err) {
           console.error(err);
           document.getElementById("articlesRow").innerHTML = `
-        <div class="col-12 text-center">
-          <div class="alert alert-danger">
-            <i class="fas fa-exclamation-triangle me-2"></i>Error loading articles
-          </div>
-        </div>
-      `;
+            <div class="col-12 text-center">
+              <div class="alert alert-danger">
+                <i class="fas fa-exclamation-triangle me-2"></i>Error loading articles
+              </div>
+            </div>
+          `;
         }
       }
 
-      // Logout functionality
+      // ✅ Logout functionality
       document
         .getElementById("logoutBtn")
         .addEventListener("click", async () => {
@@ -151,12 +168,24 @@
               method: "POST",
               credentials: "include",
             });
+
+            // Always clear local storage + cookies reference
+            localStorage.removeItem("token");
+            localStorage.removeItem("username");
+            localStorage.removeItem("email");
+            localStorage.removeItem("role");
+
             if (res.ok) {
-              alert("Logged out successfully!");
-              window.location.href =
-                "/Frontend/pages/login-and-register/login-and-register.html";
+              const toastEl = document.getElementById("logoutToast");
+              const toast = new bootstrap.Toast(toastEl);
+              toast.show();
+
+              setTimeout(() => {
+                window.location.href =
+                  "/Frontend/pages/login-and-register/login-and-register.html";
+              }, 1500);
             } else {
-              alert("Logout failed");
+              alert("Logout failed on server");
             }
           } catch (err) {
             console.error(err);
