feat: add article detail page with like button and comments functionality; update home page styles and logout process

--- a/Frontend/pages/home-page.html
+++ b/Frontend/pages/home-page.html
@@ -12,36 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <style>
-      .article-card {
-        transition: transform 0.2s;
-        margin-bottom: 20px;
-      }
-      .article-card:hover {
-        transform: translateY(-5px);
-      }
-      .article-image {
-        height: 200px;
-        object-fit: cover;
-      }
-      .logout-btn {
-        background-color: #dc3545;
-        color: white;
-        border: none;
-        padding: 8px 16px;
-        border-radius: 20px;
-      }
-      .logout-btn:hover {
-        background-color: #c82333;
-        transform: scale(1.05);
-      }
-      .profile-image {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        object-fit: cover;
-      }
-    </style>
+    <link rel="stylesheet" href="/Frontend/css/home-page.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -89,112 +60,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <script>
-      // Render articles to DOM
-      function renderArticles(articles) {
-        const row = document.getElementById("articlesRow");
-        row.innerHTML = "";
-
-        if (!articles || articles.length === 0) {
-          row.innerHTML = `
-            <div class="col-12 text-center">
-              <div class="alert alert-info">
-                <i class="fas fa-info-circle me-2"></i>No articles yet
-              </div>
-            </div>
-          `;
-          return;
-        }
-
-        articles.forEach((article) => {
-          const col = document.createElement("div");
-          col.className = "col-md-4 mb-3";
-
-          const excerpt =
-            article.excerpt && article.excerpt.length > 100
-              ? article.excerpt.substring(0, 100) + "..."
-              : article.excerpt || "";
-
-          col.innerHTML = `
-            <div class="card article-card h-100">
-              ${
-                article.imageUrl
-                  ? `<img src="${article.imageUrl}" class="card-img-top article-image" alt="">`
-                  : ""
-              }
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">${article.title}</h5>
-                <p class="card-text">${excerpt}</p>
-                <a href="article-detail.html?id=${
-                  article.id
-                }" class="btn btn-primary mt-auto">Read Full Article</a>
-              </div>
-            </div>
-          `;
-
-          row.appendChild(col);
-        });
-      }
-
-      // Load articles from backend
-      async function loadHomeArticles() {
-        try {
-          const res = await fetch(
-            "http://localhost:8080/api/articles/published"
-          );
-          if (!res.ok) throw new Error("Network response was not ok");
-
-          const data = await res.json();
-          renderArticles(data);
-        } catch (err) {
-          console.error(err);
-          document.getElementById("articlesRow").innerHTML = `
-            <div class="col-12 text-center">
-              <div class="alert alert-danger">
-                <i class="fas fa-exclamation-triangle me-2"></i>Error loading articles
-              </div>
-            </div>
-          `;
-        }
-      }
-
-      // ✅ Logout functionality
-      document
-        .getElementById("logoutBtn")
-        .addEventListener("click", async () => {
-          try {
-            const res = await fetch("http://localhost:8080/api/auth/logout", {
-              method: "POST",
-              credentials: "include",
-            });
-
-            // Always clear local storage + cookies reference
-            localStorage.removeItem("token");
-            localStorage.removeItem("username");
-            localStorage.removeItem("email");
-            localStorage.removeItem("role");
-
-            if (res.ok) {
-              const toastEl = document.getElementById("logoutToast");
-              const toast = new bootstrap.Toast(toastEl);
-              toast.show();
-
-              setTimeout(() => {
-                window.location.href =
-                  "/Frontend/pages/login-and-register/login-and-register.html";
-              }, 1500);
-            } else {
-              alert("Logout failed on server");
-            }
-          } catch (err) {
-            console.error(err);
-            alert("Error logging out");
-          }
-        });
-
-      // Load articles when DOM is ready
-      document.addEventListener("DOMContentLoaded", loadHomeArticles);
-    </script>
+    <script src="/Frontend/JavaScript/home-page.js"></script>
   </body>
 </html>
