--- a/Frontend/pages/Admin/admin-dashboard.html
+++ b/Frontend/pages/Admin/admin-dashboard.html
@@ -287,5 +287,55 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/Frontend/JavaScript/Admin/admin-dashboard.js"></script>
+
+    <script>
+      // Add this script to your admin-dashboard.html
+      document.addEventListener("DOMContentLoaded", function () {
+        // Check if user is authenticated and is an admin
+        const token = localStorage.getItem("token");
+        const role = localStorage.getItem("role");
+        const username = localStorage.getItem("username");
+
+        console.log("Token:", token);
+        console.log("Role:", role);
+        console.log("Username:", username);
+
+        if (!token) {
+          alert("Please log in first.");
+          window.location.href = "/Frontend/pages/login.html";
+          return;
+        }
+
+        if (role !== "ADMIN") {
+          alert("Access denied. Please log in as an admin.");
+          window.location.href = "/Frontend/pages/login.html";
+          return;
+        }
+
+        // If we get here, user is authenticated as admin
+        console.log("Welcome, Admin!");
+
+        // Display username in the UI
+        const userDisplayElement = document.getElementById("userDisplay");
+        if (userDisplayElement) {
+          userDisplayElement.textContent = username;
+        }
+
+        // Add logout functionality
+        const logoutBtn = document.getElementById("logoutBtn");
+        if (logoutBtn) {
+          logoutBtn.addEventListener("click", function () {
+            // Clear localStorage
+            localStorage.removeItem("token");
+            localStorage.removeItem("username");
+            localStorage.removeItem("role");
+            localStorage.removeItem("email");
+
+            // Redirect to login page
+            window.location.href = "/Frontend/pages/login.html";
+          });
+        }
+      });
+    </script>
   </body>
 </html>
